Endret overskrift og neste års dato

--- a/Animating Countdown/countdown.html
+++ b/Animating Countdown/countdown.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="del-countdown">
-        <h1>MEGA EVENT</h1>
+        <h1>Kjetil's Birthday</h1>
         <div id="clock"></div>
         <div id="units">
             <span>Days</span>
