Lagt til Searchcontroller

--- a/Date Search/index.html
+++ b/Date Search/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="shortcut icon" href="#">
-<script src="js/searchcontroller.js" defer></script>
+<script src="searchcontroller.js" defer></script>
 <meta charset="UTF-8">
 <link href="main.css" rel="stylesheet" />
 <title>Dato-søk</title>
