--- a/Date Search/index.html
+++ b/Date Search/index.html
@@ -5,6 +5,7 @@
 <script src="searchcontroller.js" defer></script>
 <meta charset="UTF-8">
 <link href="main.css" rel="stylesheet" />
+<link href="datesearch.css" rel="stylesheet" />
 <title>Dato-søk</title>
 </head>
 <body>
