Lagt til date search på github pages

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Small Web Projects</h1>
-    <a href="Animating Countdown/countdown.html">Animating Countdown</a>
+    <ul>
+        <li><a href="Animating Countdown/countdown.html">Animating Countdown</a></li>
+        <li><a href="Date Search/index.html">Date Search</a></li>
+    </ul>
+    
+    
 </body>
 </html>
