--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -21,7 +21,7 @@
         <label for="runResult">Resultat:</label>
         <input type="text" name="runResult" id="runResult">
         <button>Beregn</button>
-        <p class="hidden">
+        <p data-result class="hidden">
             Resultatet <span data-input></span> på distansen <span data-event></span> gir <span data-points></span> poeng
         </p>
     </div>
@@ -38,7 +38,7 @@
         <label for="jumpResult">Resultat:</label>
         <input type="text" name="jumpResult" id="jumpResult">
         <button>Beregn</button>
-        <p class="hidden">
+        <p data-result class="hidden">
             Resultatet <span data-input></span> i <span data-event></span> gir <span data-points></span> poeng
         </p>
     </div>
@@ -55,7 +55,7 @@
         <label for="throwResult">Resultat:</label>
         <input type="text" name="throwResult" id="throwResult">
         <button>Beregn</button>
-        <p class="hidden">
+        <p data-result class="hidden">
             Resultatet <span data-input></span> i <span data-event></span> gir <span data-points></span> poeng
         </p>
     </div>
