Lagt til algoritme for utregning av poeng

--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -30,7 +30,7 @@
         <p>Hopp</p>
         <label for="jumpEvent">Øvelse:</label>
         <select name="jumpEvent" id="jumpEvent">
-            <option value="lengde">lengde</option>
+            <option value="lengde">Lengde</option>
             <option value="hogde">Høgde</option>
             <option value="stav">Stav</option>
             <option value="tresteg">Tresteg</option>
