Lagt til Friidrettskalkulator på github pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="Animating Countdown/countdown.html">Animating Countdown</a></li>
         <li><a href="Date Search/index.html">Date Search</a></li>
+        <li><a href="Friidrettskalkulator/poeng.html">Friidrettskalkulator (In Progress)</a></li>
     </ul>
     
     
