--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -10,6 +10,21 @@
 </head>
 <body>
     <h1>Friidrettskalkulator</h1>
+
+    <label for="age">Alder:</label>
+        <select name="age" id="age">
+            <option value="G15">G15</option>
+            <option value="J15">J15</option>
+            <option value="G16">G16</option>
+            <option value="J16">J16</option>
+            <option value="G17">G17</option>
+            <option value="J17">J17</option>
+            <option value="G18">G18</option>
+            <option value="J18">J18</option>
+            <option value="G19">G19</option>
+            <option value="J19">J19</option>
+        </select>
+
     <div id="runRoot">
         <p>Løp</p>
         <label for="distance">Øvelse:</label>
