--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -12,7 +12,7 @@
     <h1>Friidrettskalkulator</h1>
 
     <label for="age">Alder:</label>
-        <select name="age" id="age">
+        <select data-age name="age" id="age">
             <option value="G15">G15</option>
             <option value="J15">J15</option>
             <option value="G16">G16</option>
