Viser årsklassen i utskrift

--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -37,7 +37,7 @@
         <input type="text" name="runResult" id="runResult">
         <button>Beregn</button>
         <p data-result class="hidden">
-            Resultatet <span data-input></span> på distansen <span data-event></span> gir <span data-points></span> poeng
+            Resultatet <span data-input></span> på distansen <span data-event></span> gir <span data-points></span> poeng i klassen <span data-class></span>
         </p>
     </div>
 
@@ -54,7 +54,7 @@
         <input type="text" name="jumpResult" id="jumpResult">
         <button>Beregn</button>
         <p data-result class="hidden">
-            Resultatet <span data-input></span> i <span data-event></span> gir <span data-points></span> poeng
+            Resultatet <span data-input></span> i <span data-event></span> gir <span data-points></span> poeng i klassen <span data-class></span>
         </p>
     </div>
 
@@ -71,7 +71,7 @@
         <input type="text" name="throwResult" id="throwResult">
         <button>Beregn</button>
         <p data-result class="hidden">
-            Resultatet <span data-input></span> i <span data-event></span> gir <span data-points></span> poeng
+            Resultatet <span data-input></span> i <span data-event></span> gir <span data-points></span> poeng i klassen <span data-class></span>
         </p>
     </div>
     
