Lagt til et par hekkeøvelser

--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -32,6 +32,9 @@
             <option value="100m">100m</option>
             <option value="200m">200m</option>
             <option value="400m">400m</option>
+            <option value="100hk">100m hekk</option>
+            <option value="110hk">110m hekk</option>
+            <option value="400hk">400m hekk</option>
         </select>
         <label for="runResult">Resultat:</label>
         <input type="text" name="runResult" id="runResult">
