Lagt til konvertering til sekunder på lengre løp

--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -32,6 +32,10 @@
             <option value="100m">100m</option>
             <option value="200m">200m</option>
             <option value="400m">400m</option>
+            <option value="800m">800m</option>
+            <option value="1500m">1500m</option>
+            <option value="3000m">3000m</option>
+            <option value="5000m">5000m</option>
             <option value="100hk">100m hekk</option>
             <option value="110hk">110m hekk</option>
             <option value="400hk">400m hekk</option>
