Lagt til CSS Tooltip som viser gyldig format

--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -42,6 +42,7 @@
         </select>
         <label for="runResult">Resultat:</label>
         <input type="text" name="runResult" id="runResult">
+        <span class="tooltip" data-tooltip="Bruk punktum og ikkje komma. Eks: 11.20 og 2.05.30">?</span>
         <button>Beregn</button>
         <p data-result class="hidden">
             Resultatet <span data-input></span> på distansen <span data-event></span> gir <span data-points></span> poeng i klassen <span data-class></span>
