--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -26,7 +26,7 @@
         </select>
 
     <div id="runRoot">
-        <p>Løp</p>
+        <h2>Løp</h2>
         <form action="">
             <label for="distance">Øvelse:</label>
             <select name="distance" id="distance">
@@ -52,7 +52,7 @@
     </div>
 
     <div id="jumpRoot">
-        <p>Hopp</p>
+        <h2>Hopp</h2>
         <form action="">
             <label for="jumpEvent">Øvelse:</label>
             <select name="jumpEvent" id="jumpEvent">
@@ -71,7 +71,7 @@
     </div>
 
     <div id="throwRoot">
-        <p>Kast</p>
+        <h2>Kast</h2>
         <form action="">
             <label for="throwEvent">Øvelse:</label>
             <select name="throwEvent" id="throwEvent">
@@ -90,6 +90,6 @@
     </div>
     
     <br>
-    <p><em>Sist oppdatert av Kjetil Stokke, 18.06.2021.</em></p>
+    <p><em>Sist oppdatert av Kjetil Stokke, 19.06.2021.</em></p>
 </body>
 </html>
