Endra hjelpeteksten i tooltip

--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -43,7 +43,7 @@
             </select>
             <label for="runResult">Resultat:</label>
             <input type="text" name="runResult" id="runResult">
-            <span class="tooltip" data-tooltip="Bruk punktum og ikkje komma. Eks: 11.20 og 2.05.30">?</span>
+            <span class="tooltip" data-tooltip="Bruk punktum og ikkje komma. Eks løp tilogmed 400m: 11.20 Eks løp over 400m: 2.05.30">?</span>
             <button>Beregn</button>
         </form>
         <p data-result class="hidden">
