--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -39,6 +39,7 @@
                 <option value="5000m">5000m</option>
                 <option value="100hk">100m hekk</option>
                 <option value="110hk">110m hekk</option>
+                <option value="300hk">300m hekk</option>
                 <option value="400hk">400m hekk</option>
             </select>
             <label for="runResult">Resultat:</label>
