--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -37,6 +37,7 @@
                 <option value="1500m">1500m</option>
                 <option value="3000m">3000m</option>
                 <option value="5000m">5000m</option>
+                <option value="80hk">80m hekk</option>
                 <option value="100hk">100m hekk</option>
                 <option value="110hk">110m hekk</option>
                 <option value="300hk">300m hekk</option>
