Feilmelding dersom øvelsen ikkje er for klassen

--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -51,6 +51,7 @@
         <p data-result class="hidden">
             Resultatet <span data-input></span> på distansen <span data-event></span> gir <span data-points></span> poeng i klassen <span data-class></span>
         </p>
+        <p data-errorMessage class="hidden">Øvelsen finnes ikkje for den aldersklassen.</p>
     </div>
 
     <div id="jumpRoot">
@@ -92,6 +93,6 @@
     </div>
     
     <br>
-    <p><em>Sist oppdatert av Kjetil Stokke, 21.06.2021.</em></p>
+    <p><em>Sist oppdatert av Kjetil Stokke, 22.06.2021.</em></p>
 </body>
 </html>
