Mobile first design

--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -33,7 +33,7 @@
 
     <div id="runRoot">
         <h2>Løp</h2>
-        <form action="">
+        <form class="grid" action="">
             <label for="distance">Øvelse:</label>
             <select name="distance" id="distance">
                 <option value="100m">100m</option>
@@ -62,7 +62,7 @@
 
     <div id="jumpRoot">
         <h2>Hopp</h2>
-        <form action="">
+        <form class="grid" action="">
             <label for="jumpEvent">Øvelse:</label>
             <select name="jumpEvent" id="jumpEvent">
                 <option value="lengde">Lengde</option>
@@ -84,7 +84,7 @@
 
     <div id="throwRoot">
         <h2>Kast</h2>
-        <form action="">
+        <form class="grid" action="">
             <label for="throwEvent">Øvelse:</label>
             <select name="throwEvent" id="throwEvent">
                 <option value="spyd">Spyd</option>
