Nye øvelser lagt til i html koden

--- a/Friidrettskalkulator/poeng.html
+++ b/Friidrettskalkulator/poeng.html
@@ -36,6 +36,7 @@
         <form class="grid" action="">
             <label for="distance">Øvelse:</label>
             <select name="distance" id="distance">
+                <option value="60m">60m</option>
                 <option value="100m">100m</option>
                 <option value="200m">200m</option>
                 <option value="400m">400m</option>
@@ -69,6 +70,8 @@
                 <option value="hogde">Høgde</option>
                 <option value="stav">Stav</option>
                 <option value="tresteg">Tresteg</option>
+                <option value="lut">Lengde uten tilløp</option>
+                <option value="hut">Høgde uten tilløp</option>
             </select>
             <label for="jumpResult">Resultat:</label>
             <input type="text" name="jumpResult" id="jumpResult">
