Added a text input for name

--- a/Animating Countdown/countdown.html
+++ b/Animating Countdown/countdown.html
@@ -8,8 +8,12 @@
     <title>Animating Countdown</title>
 </head>
 <body>
+    <div class="change">
+        <input class="name" type="text" placeholder="Your name">
+        <button class="saveButton">Save</button>
+    </div>
     <div id="del-countdown">
-        <h1>Kjetil's Birthday</h1>
+        <h1><span data-name>Kjetil</span>'s Birthday</h1>
         <div id="clock"></div>
         <div id="units">
             <span>Days</span>
