Added a date input

--- a/Animating Countdown/countdown.html
+++ b/Animating Countdown/countdown.html
@@ -10,6 +10,7 @@
 <body>
     <div class="change">
         <input class="name" type="text" placeholder="Your name">
+        <input type="date" class="dateInput">
         <button class="saveButton">Save</button>
     </div>
     <div id="del-countdown">
